@@ -1,3 +1,8 @@
+Thu Jul 12 17:26:05 2007  Tim Janik  <timj@imendio.com>
+
+	* tests/slice-concurrent.c: added GSLice test from Stefan Westerfeld,
+	bug #433314.
+
 Thu Jul 12 15:46:40 2007  Tim Janik  <timj@imendio.com>
 
 	* glib/gslice.c: migrate per-thread magazine caches from single-thread
